--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
 moz-sql-parser
+sqlparse
 klepto
+psycopg2-binary
+numpy
+pandas
+torch
+torchvision
+tensorflow
+networkx
+pomegranate
+matplotlib
+seaborn
+sklearn
