eigen based svd in c++ implementation
* seems to do fine, but taking SVD of joint_prob - independent prob, does not
do well. Numerical instability issues?

--- a/pgm/cpp/Makefile
+++ b/pgm/cpp/Makefile
@@ -7,7 +7,8 @@ ifeq (${OS}, Darwin)
 	LIB = libpgm.dylib
 else ifeq (${OS}, Linux)
   # Linux
- 	CLANG ?= g++
+   #CLANG ?= g++
+ 	CLANG ?= clang++
 	LIB = libpgm.so
 else
   $(error Unsupported platform: ${OS})
