--- a/pgm/cpp/Makefile
+++ b/pgm/cpp/Makefile
@@ -1,24 +1,24 @@
 OS = $(shell uname -s)
 
-CFLAGS = -O3 -std=c++11 -fPIC -I /usr/local/Cellar/eigen/3.3.7/include/eigen3/
 ifeq (${OS}, Darwin)
   # OS X
 	CLANG ?= clang++
 	LIB = libpgm.dylib
+	CFLAGS = -O3 -std=c++11 -fPIC -I /usr/local/Cellar/eigen/3.3.7/include/eigen3/
+	SHARED_FLAG = -dynamiclib
 else ifeq (${OS}, Linux)
   # Linux
  	CLANG ?= clang++
 	LIB = libpgm.so
+	CFLAGS = -O3 -std=c++11 -fPIC -I /data/pari/libs/
+	SHARED_FLAG = -shared
 else
   $(error Unsupported platform: ${OS})
 endif
 
 ${LIB}: main.cc
 	$(CLANG) $(CFLAGS) -c main.cc -o main.o
-	# FIXME: need to test on linux, will just sharing dynamiclib to shared work?
-	# original command was:
-	#$(CLANG) -shared  -Wl,-soname,${LIB} -o ${LIB} main.o
-	$(CLANG) -dynamiclib -o ${LIB} main.o
+	$(CLANG) $(SHARED_FLAG) -o ${LIB} main.o
 
 clean:
 	rm -f *.bc *.o *.out ${LIB}
