--- a/templates/toml2c/2.toml
+++ b/templates/toml2c/2.toml
@@ -60,6 +60,8 @@ AND Xprod_year_low < t.production_year
   keys = ["Xgenre", "Xlanguage"]
   dependencies = 1
 
+# essentially, this lets us sample from the extreme ends of the joint
+# distribution of the predicates
   sqls = [''' SELECT mi1.info, mi2.info, count(*) FROM movie_info as mi1, movie_info as mi2, info_type as it1, info_type as it2, title as t WHERE t.id = mi1.movie_id AND t.id = mi2.movie_id AND mi1.info_type_id = it1.id AND it1.id = '3' AND mi2.info_type_id = it2.id AND it2.id = '4' AND t.production_year <= Xprod_year_up AND Xprod_year_low < t.production_year GROUP BY mi1.info, mi2.info HAVING count(*) > 5000 ORDER BY count(*) desc''',
   ''' SELECT mi1.info, mi2.info, count(*) FROM movie_info as mi1, movie_info as mi2, info_type as it1, info_type as it2, title as t WHERE t.id = mi1.movie_id AND t.id = mi2.movie_id AND mi1.info_type_id = it1.id AND it1.id = '3' AND mi2.info_type_id = it2.id AND it2.id = '4' AND t.production_year <= Xprod_year_up AND Xprod_year_low < t.production_year GROUP BY mi1.info, mi2.info HAVING count(*) < 500''']
   sampling_method = "uniform"
