--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ moz-sql-parser
 sqlparse
 klepto
 psycopg2-binary
-numpy==1.16.4
+numpy==1.16
 pandas
 torch
 torchvision
@@ -15,3 +15,4 @@ sklearn
 toml
 pyzmq
 psutil
+wget
