post-meeting commit, gotta figure out the sampling strategy and plotting stuff

--- a/pgm/cpp/Makefile
+++ b/pgm/cpp/Makefile
@@ -10,7 +10,8 @@ else ifeq (${OS}, Linux)
   # Linux
  	CLANG ?= clang++
 	LIB = libpgm.so
-	CFLAGS = -O3 -std=c++11 -fPIC -I /home/ubuntu/libs/
+	#CFLAGS = -O3 -std=c++11 -fPIC -I /home/ubuntu/libs/
+	CFLAGS = -O3 -std=c++11 -fPIC -I /data/pari/libs/
 	SHARED_FLAG = -shared
 else
   $(error Unsupported platform: ${OS})
