--- a/templates/toml6/6.toml
+++ b/templates/toml6/6.toml
@@ -7,9 +7,7 @@ sql = '''SELECT COUNT(*)
 FROM title as t,
 movie_info as mi1,
 kind_type as kt,
-movie_info as mi2,
 info_type as it1,
-info_type as it2,
 info_type as it3,
 info_type as it4,
 movie_info_idx as mii1,
@@ -18,17 +16,14 @@ movie_keyword as mk,
 keyword as k
 WHERE
 t.id = mi1.movie_id
-AND t.id = mi2.movie_id
 AND t.id = mii1.movie_id
 AND t.id = mii2.movie_id
 AND t.id = mk.movie_id
-AND mi2.movie_id = mk.movie_id
 AND mii2.movie_id = mii1.movie_id
-AND mi1.movie_id = mi2.movie_id
 AND mi1.movie_id = mii1.movie_id
+AND mk.movie_id = mi1.movie_id
 AND mk.keyword_id = k.id
 AND mi1.info_type_id = it1.id
-AND mi2.info_type_id = it2.id
 AND mii1.info_type_id = it3.id
 AND mii2.info_type_id = it4.id
 AND t.kind_id = kt.id
@@ -37,7 +32,6 @@ AND (Xprod_year_up)
 AND (Xprod_year_low)
 AND (Xmi1)
 AND (Xit1)
-AND (Xit2)
 AND it3.id = '100'
 AND it4.id = '101'
 AND (Xrating_up)
@@ -169,27 +163,3 @@ AND (Xvotes_down)
   num_quantiles = 2
   min_samples = 5
   max_samples = 15
-
-  # TODO: sample for this based on predicates selected for it1,it3,it4,kt etc.
-  [[templates.predicates]]
-  type = "sql"
-  columns = ["it2.id"]
-  keys = ["Xit2"]
-  dependencies = 1
-  pred_type = "IN"
-
-  sql = '''
-  SELECT it.id, count(*)
-	FROM movie_info as mi, info_type as it, title as t
-	WHERE t.id = mi.movie_id
-	AND mi.info_type_id = it.id
-  AND (Xprod_year_up)
-  AND (Xprod_year_low)
-	GROUP BY it.id HAVING COUNT(*) > 10000
-  ORDER BY COUNT(*) DESC
-  '''
-
-  sampling_method = "quantile"
-  num_quantiles = 2
-  min_samples = 1
-  max_samples = 3
