--- a/templates/toml2d/2d.toml
+++ b/templates/toml2d/2d.toml
@@ -23,13 +23,13 @@ AND k.id = mk.keyword_id
 AND mi1.movie_id = mi2.movie_id
 AND mi1.info_type_id = it1.id
 AND mi2.info_type_id = it2.id
-AND it1.id = '3'
-AND it2.id = '4'
+AND it1.id = (Xit1)
+AND it2.id = (Xit2)
 AND t.kind_id = kt.id
 AND ci.person_id = n.id
 AND ci.role_id = rt.id
-AND (Xgenre)
-AND (Xlanguage)
+AND (Xmi1)
+AND (Xmi2)
 AND (Xmovie_kind)
 AND (Xrole)
 AND (Xgender)
@@ -48,12 +48,58 @@ AND (Xprod_year_low)
   columns = ["t.production_year"]
   keys = ["Xprod_year_low", "Xprod_year_up"]
   dependencies = 0
-  #options = [[1875, 1925], [1925, 1975], [1975, 2015], [1875, 1975], [1925,
-  #2015], [1950, 1990], [1990, 2015]]
   options = [[1925, 1975], [1975, 2015], [1875, 1975], [1925,
   2015], [1950, 1990], [1990, 2015]]
   sampling_method = "uniform"
   pred_type = "range"
+  min_samples = 1
+  max_samples = 1
+
+  [[templates.predicates]]
+  type = "sql"
+  columns = ["it1.id"]
+  keys = ["Xit1"]
+  dependencies = 1
+  pred_type = "in"
+
+  sql = '''
+  SELECT it.id, count(*)
+	FROM movie_info as mi, info_type as it, title as t
+	WHERE t.id = mi.movie_id
+	AND mi.info_type_id = it.id
+  AND (Xprod_year_up)
+  AND (Xprod_year_low)
+	GROUP BY it.id HAVING COUNT(*) > 50000
+  ORDER BY COUNT(*) DESC
+  '''
+
+  sampling_method = "quantile"
+  num_quantiles = 1
+  min_samples = 1
+  max_samples = 1
+
+  [[templates.predicates]]
+  type = "sql"
+  columns = ["it2.id"]
+  keys = ["Xit2"]
+  dependencies = 1
+  pred_type = "in"
+
+  # slight hack: reusing it1 name in this sql to select elements for it2
+  sql = '''
+  SELECT it1.id, count(*)
+	FROM movie_info as mi, info_type as it1, title as t
+	WHERE t.id = mi.movie_id
+	AND mi.info_type_id = it1.id
+  AND (Xprod_year_up)
+  AND (Xprod_year_low)
+  AND NOT (Xit1)
+	GROUP BY it.id HAVING COUNT(*) > 50000
+  ORDER BY COUNT(*) DESC
+  '''
+
+  sampling_method = "quantile"
+  num_quantiles = 1
   min_samples = 1
   max_samples = 1
 
@@ -63,7 +109,7 @@ AND (Xprod_year_low)
   # Length of these lists should be the same
   type = "sql" # sample from given sql, sample from given list
   columns = ["mi1.info", "mi2.info"]
-  keys = ["Xgenre", "Xlanguage"]
+  keys = ["Xmi1", "Xmi2"]
   dependencies = 1
   pred_type = "in"
 
@@ -75,9 +121,9 @@ AND (Xprod_year_low)
   WHERE t.id = mi1.movie_id
   AND t.id = mi2.movie_id
   AND mi1.info_type_id = it1.id
-  AND it1.id = '3'
+  AND (Xit1)
   AND mi2.info_type_id = it2.id
-  AND it2.id = '4'
+  AND (Xit2)
   AND (Xprod_year_up)
   AND (Xprod_year_low)
   GROUP BY mi1.info, mi2.info
