--- a/templates/so_test/test.toml
+++ b/templates/so_test/test.toml
@@ -1,8 +1,4 @@
-title = "Template 8"
-
-# conditioning stuff on companies
-
-[base_sql]
+title = "Test"
 
 [base_sql]
 sql = '''SELECT COUNT(*)
@@ -28,19 +24,18 @@ AND (Xtag_name)
 
   # all the unknown predicates in the base sql will be specified in groups
   [[templates.predicates]]
-  type = "sql"
+  type = "sqls"
   columns = ["s.site_name"]
   keys = ["Xsite_name"]
   dependencies = 0
 
   pred_type = "in"
 
-  sql = '''
-  SELECT site_name
-  FROM site
-  '''
+  sqls = ["SELECT s.site_name FROM site as s, question as q WHERE s.site_name IN ('stackoverflow') AND q.site_id = s.site_id LIMIT 10",
+  "SELECT s.site_name, count(*) FROM site as s, question as q WHERE q.site_id = s.site_id GROUP BY s.site_name HAVING COUNT(*) > 15000 ORDER BY count(*) desc"]
 
-  sampling_method = "uniform"
+  sampling_method = "quantile"
+  num_quantiles = 2
   min_samples = 1
   max_samples = 1
 
@@ -56,12 +51,20 @@ AND (Xtag_name)
 
   sql = '''
   SELECT t.name, count(*)
-  FROM tag as t, site as s
+  FROM
+  tag as t,
+  site as s,
+  question as q,
+  tag_question as tq
   WHERE
-  t.site_id = s.id
+  t.site_id = s.site_id
+  AND q.site_id = s.site_id
+  AND tq.site_id = s.site_id
+  AND tq.question_id = q.id
+  AND tq.tag_id = t.id
   AND (Xsite_name)
   GROUP BY t.name
-  HAVING count(*) > 500
+  HAVING COUNT(*) > 500
   ORDER BY count(*) desc
   '''
 
