--- a/templates/so_templates/1/1a.toml
+++ b/templates/so_templates/1/1a.toml
@@ -26,7 +26,7 @@ AND (Xquestion_up)
   [[templates.predicates]]
   [[templates.predicates.multi]]
   type = "list"
-  columns = ["q1.view_count"]
+  columns = ["q.view_count"]
   keys = ["Xquestion_low", "Xquestion_up"]
   dependencies = 0
   options = [[0,100], [100,100000], [10,1000]]
@@ -37,7 +37,7 @@ AND (Xquestion_up)
 
   [[templates.predicates.multi]]
   type = "list"
-  columns = ["q1.score"]
+  columns = ["q.score"]
   keys = ["Xquestion_low", "Xquestion_up"]
   dependencies = 0
   options = [[0,0], [1,10], [10,1000], [0,5], [0,1000]]
@@ -48,7 +48,7 @@ AND (Xquestion_up)
 
   [[templates.predicates.multi]]
   type = "list"
-  columns = ["q1.favorite_count"]
+  columns = ["q.favorite_count"]
   keys = ["Xquestion_low", "Xquestion_up"]
   dependencies = 0
   options = [[0,1], [1,10], [5,5000], [0,10000]]
