--- a/templates/so_templates/2/2a.toml
+++ b/templates/so_templates/2/2a.toml
@@ -29,10 +29,10 @@ AND (Xs1_name)
 AND (Xs2_name)
 AND (Xt1_name)
 AND (Xt2_name)
-AND (Xq1_view_low)
-AND (Xq1_view_up)
-AND (Xq2_view_low)
-AND (Xq2_view_up)
+AND (Xq1_low)
+AND (Xq1_up)
+AND (Xq2_low)
+AND (Xq2_up)
 '''
 
 # template 1
@@ -44,7 +44,7 @@ AND (Xq2_view_up)
   [[templates.predicates.multi]]
   type = "list"
   columns = ["q1.view_count"]
-  keys = ["Xquestion_low", "Xquestion_up"]
+  keys = ["Xq1_low", "Xq1_up"]
   dependencies = 0
   options = [[0,100], [100,100000], [10,1000]]
   sampling_method = "uniform"
@@ -55,7 +55,7 @@ AND (Xq2_view_up)
   [[templates.predicates.multi]]
   type = "list"
   columns = ["q1.score"]
-  keys = ["Xquestion_low", "Xquestion_up"]
+  keys = ["Xq1_low", "Xq1_up"]
   dependencies = 0
   options = [[0,0], [1,10], [10,1000], [0,5], [0,1000]]
   sampling_method = "uniform"
@@ -66,7 +66,7 @@ AND (Xq2_view_up)
   [[templates.predicates.multi]]
   type = "list"
   columns = ["q1.favorite_count"]
-  keys = ["Xquestion_low", "Xquestion_up"]
+  keys = ["Xq1_low", "Xq1_up"]
   dependencies = 0
   options = [[0,1], [1,10], [5,5000], [0,10000]]
   sampling_method = "uniform"
@@ -78,7 +78,7 @@ AND (Xq2_view_up)
   [[templates.predicates.multi]]
   type = "list"
   columns = ["q2.view_count"]
-  keys = ["Xquestion_low", "Xquestion_up"]
+  keys = ["Xq2_low", "Xq2_up"]
   dependencies = 0
   options = [[0,100], [100,100000], [10,1000]]
   sampling_method = "uniform"
@@ -89,7 +89,7 @@ AND (Xq2_view_up)
   [[templates.predicates.multi]]
   type = "list"
   columns = ["q2.score"]
-  keys = ["Xquestion_low", "Xquestion_up"]
+  keys = ["Xq2_low", "Xq2_up"]
   dependencies = 0
   options = [[0,0], [1,10], [10,1000], [0,5], [0,1000]]
   sampling_method = "uniform"
@@ -100,7 +100,7 @@ AND (Xq2_view_up)
   [[templates.predicates.multi]]
   type = "list"
   columns = ["q2.favorite_count"]
-  keys = ["Xquestion_low", "Xquestion_up"]
+  keys = ["Xq2_low", "Xq2_up"]
   dependencies = 0
   options = [[0,1], [1,10], [5,5000], [0,10000]]
   sampling_method = "uniform"
@@ -181,10 +181,10 @@ AND (Xq2_view_up)
 
   AND (Xs1_name)
   AND (Xs2_name)
-  AND (Xq1_view_low)
-  AND (Xq1_view_up)
-  AND (Xq2_view_low)
-  AND (Xq2_view_up)
+  AND (Xq1_low)
+  AND (Xq1_up)
+  AND (Xq2_low)
+  AND (Xq2_up)
 
   GROUP BY t1.name, t2.name
   ORDER BY COUNT(*) DESC'''
