--- a/templates/imdb_templates/9a/9a.toml
+++ b/templates/imdb_templates/9a/9a.toml
@@ -1,10 +1,10 @@
-title = "Template Regex"
+title = "regex 1"
 
 # person info, e.g., birth location, movie info, e.g., genre/language
 
 [base_sql]
 sql = '''
-SELECT COUNT(*)
+SELECT mi.info, pi.info, COUNT(*)
 FROM title as t,
 kind_type as kt,
 movie_info as mi1,
@@ -20,6 +20,7 @@ AND t.id = mi1.movie_id
 AND mi1.info_type_id = it1.id
 AND t.kind_id = kt.id
 AND ci.person_id = n.id
+AND ci.movie_id = mi1.movie_id
 AND ci.role_id = rt.id
 AND n.id = pi.person_id
 AND pi.info_type_id = it2.id
@@ -29,9 +30,6 @@ AND (Xmovie_info)
 AND (Xperson_info)
 AND (Xmovie_kind)
 AND (Xrole)
-AND (Xgender)
-AND (Xprod_year_up)
-AND (Xprod_year_low)
 '''
 
 # template 1
@@ -39,65 +37,42 @@ AND (Xprod_year_low)
 
   name = "1a"
 
-  # all the unknown predicates in the base sql will be specified in groups
-  [[templates.predicates]]
-  type = "list"
-  columns = ["t.production_year"]
-  keys = ["Xprod_year_low", "Xprod_year_up"]
-  dependencies = 0
-  options = [[1925, 1975], [1975, 2015], [1875, 1975], [1925,
-  2015], [1950, 1990], [1990, 2015]]
-  sampling_method = "uniform"
-  pred_type = "range"
-  min_samples = 1
-  max_samples = 1
-
   [[templates.predicates]]
   type = "sql"
   columns = ["kt.kind"]
   keys = ["Xmovie_kind"]
-  dependencies = 1
+  dependencies = 0
   pred_type = "IN"
 
-  # we want to sample this based on the ALREADY selected value for company name /
-  # company type
   sql = '''
   SELECT kt.kind, count(*)
-  FROM title as t, kind_type as kt
-  WHERE t.kind_id = kt.id
-  AND (Xprod_year_up)
-  AND (Xprod_year_low)
+  FROM kind_type as kt
   GROUP BY kt.kind
-  ORDER BY count(*) desc
   '''
 
   sampling_method = "quantile"
-  num_quantiles = 2
+  num_quantiles = 1
   min_samples = 3
   max_samples = 15
 
   [[templates.predicates]]
 
   type = "sql"
-  columns = ["n.gender", "rt.role"]
-  keys = ["Xgender", "Xrole"]
+  columns = ["rt.role"]
+  keys = ["Xrole"]
   dependencies = 0
   pred_type = "IN"
 
   sql = '''
-  SELECT n.gender, rt.role, count(*)
-  FROM cast_info as ci,
-  name as n, role_type as rt
-  WHERE ci.person_id = n.id
-  AND ci.role_id = rt.id
-  GROUP BY n.gender, rt.role
-  ORDER BY count(*) desc
+  SELECT rt.role, count(*)
+  FROM role_type as rt
+  GROUP BY rt.role
   '''
 
   sampling_method = "quantile"
-  num_quantiles = 2
-  min_samples = 1
-  max_samples = 4
+  num_quantiles = 1
+  min_samples = 3
+  max_samples = 15
 
   [[templates.predicates]]
   type = "sql"
@@ -113,14 +88,8 @@ AND (Xprod_year_low)
 
   sql = '''
   SELECT it.id, count(DISTINCT mi.info)
-	FROM movie_info as mi, info_type as it, title as t,
-  kind_type as kt
-	WHERE t.id = mi.movie_id
-	AND mi.info_type_id = it.id
-  AND kt.id = t.kind_id
-  AND (Xprod_year_up)
-  AND (Xprod_year_low)
-  AND (Xmovie_kind)
+	FROM movie_info as mi, info_type as it
+	WHERE mi.info_type_id = it.id
 	GROUP BY it.id HAVING COUNT(DISTINCT mi.info) > 2000
   ORDER BY COUNT(DISTINCT mi.info) DESC
   '''
@@ -134,19 +103,53 @@ AND (Xprod_year_low)
 
   sampling_method = "quantile"
   num_quantiles = 2
-  min_count = 50
+  min_count = 500
   min_chars = 2
   max_chars = 5
 
   sql = '''
   SELECT mi.info
-	FROM movie_info as mi, info_type as it1, title as t,
-  kind_type as kt
-	WHERE t.id = mi.movie_id
-	AND mi.info_type_id = it1.id
-  AND kt.id = t.kind_id
-  AND (Xprod_year_up)
-  AND (Xprod_year_low)
-  AND (Xmovie_kind)
+	FROM movie_info as mi, info_type as it1
+	WHERE mi.info_type_id = it1.id
   AND (Xit1)
+  '''
+
+  [[templates.predicates]]
+  type = "sql"
+  columns = ["it2.id"]
+  keys = ["Xit2"]
+  dependencies = 1
+  pred_type = "IN"
+
+  sampling_method = "quantile"
+  num_quantiles = 1
+  min_samples = 1
+  max_samples = 1
+
+  sql = '''
+  SELECT it.id, count(DISTINCT pi.info)
+	FROM info_type as it, person_info as pi
+	WHERE pi.info_type_id = it.id
+	GROUP BY it.id HAVING COUNT(DISTINCT pi.info) > 5000
+  ORDER BY COUNT(DISTINCT pi.info) DESC
+  '''
+
+  [[templates.predicates]]
+  type = "sql"
+  columns = ["pi.info"]
+  keys = ["Xperson_info"]
+  dependencies = 1
+  pred_type = "ILIKE"
+
+  sampling_method = "quantile"
+  num_quantiles = 2
+  min_count = 250
+  min_chars = 2
+  max_chars = 5
+
+  sql = '''
+  SELECT pi.info
+	FROM person_info as pi, info_type as it2
+  WHERE pi.info_type_id = it2.id
+  AND (Xit2)
   '''
